--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048</title>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="scoreContainer">
-        <div class="scoreTitle">Score</div>
-        <span id="score">0</span>
+        <div class="scoreTitle">Score:</div>
+        <div id="score">0</div>
+        <div id="results"></div>
     </div>
     <div class="grid"></div>
 
